<resources>
    <string name="title_wallet">钱包</string>
    <string name="title_quotes">行情</string>
    <string name="transaction">交易</string>
    <string name="swap">交易</string>
    <string name="financial_management">DApp</string>
    <string name="title_mine">我的</string>
    <string name="app_name">UvToken</string>
    <string name="app_name_debug">UvToken-Debug</string>
    <string name="multi_chain_wallet">多链钱包</string>
    <string name="support_public_chains">支持BTC、ETH、TRX 等主流公链</string>
    <string name="create_wallet">创建钱包</string>
    <string name="not_have_wallet">没有钱包,首次使用</string>
    <string name="import_wallet">导入钱包</string>
    <string name="have_wallet">已有钱包，支持助记词、私钥等方式导入</string>
    <string name="wallet_name">钱包名称</string>
    <string name="please_enter_a_name">请输入名称</string>
    <string name="pwd">密码</string>
    <string name="please_enter_pwd">请输入密码</string>
    <string name="char1_20">1-20位字符</string>
    <string name="pwd_prompt">至少8位字符,包含大小写字母和数字</string>
    <string name="repeat_pwd">重复密码</string>
    <string name="please_enter_pwd_again">请再次输入密码</string>
    <string name="already_read">我已阅读并同意</string>
    <string name="user_agreement">《使用条款》</string>
    <string name="terms_of_use">使用条款</string>
    <string name="create">创建</string>
    <string name="add_currency">添加币种</string>
    <string name="will_support_more_main_chain_currencies">即将支持更多主链币种</string>
    <string name="creating_a_wallet_for_you">正在为您创建钱包中...</string>
    <string name="password_input_is_inconsistent">两次密码输入不一致</string>
    <string name="create_failed">创建失败，请重试</string>
    <string name="press_again_to_exit">再按一次退出</string>
    <string name="sale">卖出</string>
    <string name="swap_receive">收到</string>
    <string name="inch_swap">兑换</string>
    <string name="market_value">市值榜</string>
    <string name="watch_list">自选</string>
    <string name="change">涨跌榜</string>
    <string name="has_no_create_eth">请选择ETH钱包后重试</string>
    <string name="disconnect_dapp">您已断开Dapp连接</string>
    <string name="cancel_select">取消自选</string>
    <string name="has_cancel">已取消</string>
    <string name="has_add">已成功添加</string>
    <string name="import_wallet_prompt">钱包服务器不保存您的助记词等信息</string>
    <string name="mnemonic_import">助记词导入</string>
    <string name="private_key_import">私钥导入</string>
    <string name="input_prompt">请填写您的助记词，用空格分开</string>
    <string name="import_confirm">导入</string>
    <string name="select_chain">请选择导入的主链钱包</string>
    <string name="please_input_12_mnemonic">请输入12个助记词！</string>
    <string name="mnemonic_spell">当前助记词拼写错误，请检查</string>
    <string name="please_input_private_key_address">请填写私钥地址!</string>
    <string name="repeat_import_prompt">已导入该钱包，无法重复导入</string>
    <string name="re_import">重新导入</string>
    <string name="complete">完成</string>
    <string name="import_btc_title">导入BTC钱包</string>
    <string name="import_eth_title">导入ETH钱包</string>
    <string name="import_aeco_title">导入AECO钱包</string>
    <string name="import_trx_title">导入TRX钱包</string>
    <string name="import_taft_title">导入TAFT钱包</string>
    <string name="input_btc_private_key_address">请填写您的BTC主链钱包私钥地址</string>
    <string name="input_eth_private_key_address">请填写您的ETH主链钱包私钥地址</string>
    <string name="input_trx_private_key_address">请填写您的TRX主链钱包私钥地址</string>
    <string name="input_taft_private_key_address">请填写您的TAFT主链钱包私钥地址</string>
    <string name="input_aeco_private_key_address">请填写您的AECO主链钱包私钥地址</string>
    <string name="private_key_wrong">请输入正确的私钥地址</string>
    <string name="import_success">导入成功</string>
    <string name="is_importing">正在导入...</string>
    <string name="had_import">已存在，请勿重复导入</string>
    <string name="already_create_wallet">已为您创建去中心化的钱包</string>
    <string name="prompt">提示</string>
    <string name="prompt_content">助记词等于整个钱包的所有控制权，请妥善保管
        助记词丢失将无法找回，请务必备份</string>
    <string name="backup_immediately">立即备份</string>
    <string name="backup_later">稍后备份</string>
    <string name="transaction_detail">转账详情</string>
    <string name="receiving_address">转账地址</string>
    <string name="miner_fee">矿工费</string>
    <string name="Memo">备注</string>
    <string name="mnemonic_backup_title">备份助记词</string>
    <string name="the_mnemonic_sequence_is_wrong">助记词顺序错误，请仔细检查</string>
    <string name="prompt1">1、请勿在联网情况下截屏、分享等操作，以防被第三方恶意软件收集造成财产损失\n
    2、钱包服务器不保存您的助记词等信息，请务必完整备份</string>
    <string name="understood">知道了</string>
    <string name="backup_prompt3">请在安全的环境下按顺序抄写一下助记词，并妥善保存</string>
    <string name="backup_completed">已完成备份</string>
    <string name="prompt0">请勿在联网情况下截屏、分享等操作，以防被第三方恶意软件收集造成财产损失</string>
    <string name="confirm_mnemonic_title">确认助记词</string>
    <string name="confirm_mnemonic">请按顺序点击助记词，已确认您的备份正确性</string>
    <string name="language_switch">语言切换</string>
    <string name="language_switch_success">语言切换成功!</string>
    <string name="address_book">地址簿</string>
    <string name="language_switch1">语言切换</string>
    <string name="currency_unit">货币单位</string>
    <string name="transfer_pwd">交易密码</string>
    <string name="about_us">关于我们</string>
    <string name="no_data">暂无数据</string>
    <string name="new_address">新建地址</string>
    <string name="save">保存</string>
    <string name="type">类型</string>
    <string name="name">名称</string>
    <string name="address">地址</string>
    <string name="description">描述</string>
    <string name="not_required">非必填</string>
    <string name="delete">删除</string>
    <string name="success_delete">成功删除</string>
    <string name="save_success">保存成功</string>
    <string name="modified_success">修改成功</string>
    <string name="input_pwd_dialog_title">输入密码</string>
    <string name="currency_unit_switch_successfully">货币单位切换成功!</string>
    <string name="new_version_update">版本更新</string>
    <string name="current_version">当前版本</string>
    <string name="already_the_latest_version">已经是最新版本了</string>
    <string name="edit_address">编辑地址</string>
    <string name="modified_failed">修改出错</string>
    <string name="please_check_the_network">请检查网络</string>
    <string name="loading_failed">加载失败</string>
    <string name="try_again">是否重试?</string>
    <string name="try_a">重试</string>
    <string name="please_try_again">请重试</string>
    <string name="ok_0">确定</string>
    <string name="cancel_0">取消</string>
    <string name="update">立即更新</string>
    <string name="total_assets">资产总值</string>
    <string name="safety_warning">安全提醒</string>
    <string name="backup_safe_reminder1">您的钱包尚未备份，如果出现忘记密码、删除应用或手机丢失等情况将会导致您的资产出现损失，请立即备份钱包！</string>
    <string name="backup_now">立即备份</string>
    <string name="assets">资产</string>
    <string name="record">记录</string>
    <string name="switch_wallet">切换钱包</string>
    <string name="please_enter_coin_name">请输入要添加的币种名称</string>
    <string name="ERC20_coin">当前仅支持添加 ERC20 代币</string>
    <string name="popular_coins">热门币种</string>
    <string name="add_coin">添加主链</string>
    <string name="adding">正在添加...</string>
    <string name="added_successfully">添加成功</string>
    <string name="add_failed">添加失败</string>
    <string name="deleting">正在删除...</string>
    <string name="successfully_deleted">删除成功</string>
    <string name="wallet_manage">钱包管理</string>
    <string name="modify_wallet_pwd">修改密码</string>
    <string name="backup_private_key">备份私钥</string>
    <string name="delete_wallet">删除钱包</string>
    <string name="Tips">温馨提示</string>
    <string name="can_not_delete">你正在使用当前钱包，切换后再删除吧</string>
    <string name="enter_wallet_password">输入钱包密码</string>
    <string name="wrong_password">密码错误</string>
    <string name="private_key">私钥</string>
    <string name="manager">管理</string>
    <string name="confirm_the_changes">确认修改</string>
    <string name="original_password">原密码</string>
    <string name="please_enter_original_password">请输入原密码</string>
    <string name="changing">修改中</string>
    <string name="account_management">账户管理</string>
    <string name="wallet_address">钱包地址</string>
    <string name="copy_success">复制成功</string>
    <string name="scan_result">扫描结果</string>
    <string name="scan">扫一扫</string>
    <string name="photo_album">相册</string>
    <string name="processing">正在处理...</string>
    <string name="no_qr">未发现二维码/条形码</string>
    <string name="scan_prompt">将二维码放入框内，即可自动扫描</string>
    <string name="copy">复制</string>
    <string name="share_it">分享</string>
    <string name="address_qr_code">地址二维码</string>
    <string name="receive_address">收款地址</string>
    <string name="receive_address1">收款地址</string>
    <string name="backup_safe_reminder">您的钱包尚未备份，如果出现忘记密码、删除应用或手机丢失等情况将会导致您的资产出现损失，请立即备份钱包！</string>
    <string name="transfer_address">转账地址</string>
    <string name="all">全部</string>
    <string name="memo">备注（Memo）</string>
    <string name="absenteeism">矿工费</string>
    <string name="slower">较慢</string>
    <string name="recommend">推荐</string>
    <string name="fast">快速</string>
    <string name="forecast">预计</string>
    <string name="minutes">分钟</string>
    <string name="customize">自定义</string>
    <string name="commit">提交</string>
    <string name="transfer_amount">转账金额</string>
    <string name="receive">收款</string>
    <string name="transfer">转账</string>
    <string name="rate">费率</string>
    <string name="waiting_for_confirmation">等待确认</string>
    <string name="submitted_seccessfully">提交成功</string>
    <string name="failed_ti_submit">提交失败</string>
    <string name="submitting">提交中...</string>
    <string name="receive_qr">收款二维码</string>
    <string name="mining_rewards">挖矿奖励</string>
    <string name="no_net">加载失败，请重试(网络权限：请在系统“设置”中，为“TAF Wallet”打开网络权限)</string>
    <string name="recent_transactions">最近交易</string>
    <string name="statement">声明</string>
    <string name="statement_content">您访问的页面将跳转至第三方DApp,您在第三方DApp使用行为将适用第三方用户协议与隐私协议，由其直接并单独向您承担责任。</string>
    <string name="title_permission">申请权限</string>
    <string name="permission_rationale_camera_message">您已拒绝相机权限,需要开启相机权限才能识别二维码</string>
    <string name="permission_rationale_storage_message">您已拒绝读写相册权限,需要读写相册权限来识别二维码</string>
    <string name="got_it">我知道了</string>
    <string name="only_support_arthur">当前DApp只支持亚瑟主链</string>
    <string name="select_wallet">选择钱包</string>
    <string name="next">下一步</string>
    <string name="please_input">地址信息未填写完整</string>
    <string name="arther_main_chain">亚瑟主链</string>
    <string name="wallet_list">钱包列表</string>
    <string name="exchange_detail">兑换详情</string>
    <string name="hour_fee">
预计60分钟</string>
    <string name="half_hour_fee">
预计30分钟</string>
    <string name="fastest_fee">
预计10分钟</string>
    <string name="server_error102604">转账金额小于等于0</string>
    <string name="trx_amount_tip">金额不能为0</string>
    <string name="server_error102606">转账用户不能为自己</string>
    <string name="new_name">新名称</string>
    <string name="please_enter_a_new_name">请输入新名称</string>
    <string name="modify_wallet_name">修改钱包名称</string>
    <string name="please_log_in_first">请先登录</string>
    <string name="successful">成功</string>
    <string name="failed">失败</string>
    <string name="amount">金额</string>
    <string name="payment_address">付款地址</string>
    <string name="transaction_hash">交易哈希值</string>
    <string name="query_details">查询详情</string>
    <string name="details">详情</string>
    <string name="this_transaction_hash_has_been_copied">已复制此交易哈希</string>
    <string name="sign_out">退出登录</string>
    <string name="no_details">暂无详情</string>
    <string name="receiving_address_same_as_transfer_address">收款地址与转账地址相同时，UvToken不允许转账交易</string>
    <string name="device_is_offling">设备已离线</string>
    <string name="please_check_network">网络已断开，请检查网络链接。</string>
    <string name="off_line">离线中</string>
    <string name="miner_fee_rate_is_too_low">矿工费率过低,将会影响交易确认时间</string>
    <string name="miner_fee_rate_is_too_high">矿工费率过高,将会造成矿工费浪费</string>
    <string name="insufficient_current_balance">当前余额不足</string>
    <string name="agree2">同意</string>
    <string name="dappAlertContent">您在第三方DApp上的使用行为将适用该第三方DApp的《用户协议》和《隐私政策》，由三方DApp直接并单独向你承担责任。</string>
    <string name="cancel">取消</string>
</resources>