<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    style="@style/MatchWrap"
    android:background="@drawable/create_or_import_arther_dialog_bg"
    android:orientation="vertical">

    <TextView
        android:id="@+id/tvCreate"
        style="@style/MatchWrap"
        android:gravity="center"
        android:paddingTop="@dimen/dp_30"
        android:paddingBottom="@dimen/dp_16"
        android:text="@string/create_wallet"
        android:textColor="@color/color_12"
        android:textSize="@dimen/sp_16" />

    <TextView
        android:id="@+id/tvImport"
        style="@style/MatchWrap"
        android:gravity="center"
        android:paddingTop="@dimen/dp_16"
        android:paddingBottom="@dimen/dp_28"
        android:text="@string/import_wallet"
        android:textColor="@color/color_12"
        android:textSize="@dimen/sp_16" />

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_8"
        android:background="@color/color_21" />

    <TextView
        android:id="@+id/tvCancel"
        style="@style/MatchWrap"
        android:gravity="center"
        android:paddingTop="@dimen/dp_14"
        android:paddingBottom="@dimen/dp_14"
        android:text="@string/cancel_0"
        android:textColor="@color/color_5"
        android:textSize="@dimen/sp_16" />
</LinearLayout>