<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context=".ui.manageWallet.ui.ChangePwdActivity">

        <include
            android:id="@+id/iTitle"
            layout="@layout/common_title" />

        <TextView
            android:id="@+id/tvOriginalPwd"
            style="@style/WrapWrap"
            android:layout_marginLeft="@dimen/dp_20"
            android:layout_marginTop="@dimen/dp_20"
            android:text="@string/original_password"
            android:textColor="@color/color_5"
            android:textSize="@dimen/sp_18" />

        <RelativeLayout
            android:id="@+id/rlOriginalPwd"
            style="@style/MatchWrap"
            android:layout_marginLeft="@dimen/dp_20"
            android:layout_marginTop="@dimen/dp_10"
            android:layout_marginRight="@dimen/dp_20">

            <EditText
                android:id="@+id/etOriginalPwd"
                style="@style/MatchWrap"
                android:hint="@string/please_enter_original_password"
                android:singleLine="true"
                android:textColor="@color/black"
                android:inputType="textPassword"
                android:textColorHint="@color/color_10"
                android:textSize="@dimen/sp_14"
                android:theme="@style/EditTextLineColor" />


            <CheckBox
                android:id="@+id/cbEye"
                style="@style/WrapWrap"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:button="@drawable/check_user_password_selector"
                android:padding="@dimen/dp_6" />

        </RelativeLayout>
        <TextView
            android:id="@+id/tvPwdPrompt1"
            style="@style/WrapWrap"
            android:layout_marginLeft="@dimen/dp_20"
            android:layout_marginTop="@dimen/dp_6"
            android:text="@string/pwd_prompt"
            android:textColor="@color/color_9"
            android:textSize="@dimen/sp_12" />

        <TextView
            android:id="@+id/tvPwd"
            style="@style/WrapWrap"
            android:layout_marginLeft="@dimen/dp_20"
            android:layout_marginTop="@dimen/dp_20"
            android:text="@string/pwd"
            android:textColor="@color/color_5"
            android:textSize="@dimen/sp_18" />

        <RelativeLayout
            android:id="@+id/rlPwd"
            style="@style/MatchWrap"
            android:layout_marginLeft="@dimen/dp_20"
            android:layout_marginTop="@dimen/dp_10"
            android:layout_marginRight="@dimen/dp_20">

            <EditText
                android:id="@+id/etPwd"
                style="@style/MatchWrap"
                android:hint="@string/please_enter_pwd"
                android:singleLine="true"
                android:textColor="@color/black"
                android:inputType="textPassword"
                android:textColorHint="@color/color_10"
                android:textSize="@dimen/sp_14"
                android:theme="@style/EditTextLineColor" />


            <CheckBox
                android:id="@+id/cbEye1"
                style="@style/WrapWrap"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:button="@drawable/check_user_password_selector"
                android:padding="@dimen/dp_6" />

        </RelativeLayout>

        <TextView
            android:id="@+id/tvPwdPrompt2"
            style="@style/WrapWrap"
            android:layout_marginLeft="@dimen/dp_20"
            android:layout_marginTop="@dimen/dp_6"
            android:text="@string/pwd_prompt"
            android:textColor="@color/color_9"
            android:textSize="@dimen/sp_12" />

        <TextView
            android:id="@+id/tvRepeatPwd"
            style="@style/WrapWrap"
            android:layout_marginLeft="@dimen/dp_20"
            android:layout_marginTop="@dimen/dp_20"
            android:text="@string/repeat_pwd"
            android:textColor="@color/color_5"
            android:textSize="@dimen/sp_18" />


        <RelativeLayout
            android:id="@+id/rlRepeatPwd"
            style="@style/MatchWrap"
            android:layout_marginLeft="@dimen/dp_20"
            android:layout_marginTop="@dimen/dp_10"
            android:layout_marginRight="@dimen/dp_20">

            <EditText
                android:id="@+id/etRepeatPwd"
                style="@style/MatchWrap"
                android:hint="@string/please_enter_pwd_again"
                android:singleLine="true"
                android:textColor="@color/black"
                android:inputType="textPassword"
                android:textColorHint="@color/color_10"
                android:textSize="@dimen/sp_14"
                android:theme="@style/EditTextLineColor" />

            <CheckBox
                android:id="@+id/cbEye2"
                style="@style/WrapWrap"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:button="@drawable/check_user_password_selector"
                android:padding="@dimen/dp_6" />

        </RelativeLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1" />

        <Button
            android:id="@+id/btnConfirm"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_44"
            android:layout_marginLeft="@dimen/dp_20"
            android:layout_marginTop="@dimen/dp_16"
            android:layout_marginRight="@dimen/dp_20"
            android:layout_marginBottom="@dimen/dp_30"
            android:background="@drawable/common_btn_select"
            android:enabled="false"
            android:gravity="center"
            android:text="@string/confirm_the_changes"
            android:textAllCaps="false"
            android:textColor="@color/white" />
    </LinearLayout>
</layout>